--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 37,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 38.0,
-"selection": true,
-"selection_from_column": 34,
-"selection_from_line": 68,
-"selection_to_column": 0,
-"selection_to_line": 70,
+"row": 100,
+"scroll_position": 76.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 43,
+"row": 49,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -35,26 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://script/character.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": PackedInt32Array(),
-"h_scroll_position": 0,
-"row": 148,
-"scroll_position": 0.0,
-"selection": false,
+"row": 49,
+"scroll_position": 23.0,
+"selection": true,
+"selection_from_column": 20,
+"selection_from_line": 47,
+"selection_to_column": 1,
+"selection_to_line": 49,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 26,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
+"row": 38,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,7 +95,49 @@ state={
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script/serverOnly/server_physics_controller.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 43,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/characters/character.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 44,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script/serverOnly/authentication.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 25,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
