--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_closed=[]
 dock_split_2=0
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://addons/godot-sqlite/godot-sqlite.gd")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/", "res://script/autoload/", "res://scenes/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://addons/", "res://addons/godot-sqlite/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
+selected_paths=PackedStringArray("res://script/autoload/network_manager.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/", "res://script/serverOnly/", "res://script/autoload/", "res://scenes/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://addons/godot-sqlite/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
 
 [docks/History]
 
@@ -35,13 +35,13 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/characters/character.tscn")
-current_scene="res://scenes/characters/character.tscn"
+current_scene="res://scenes/UI/main_menu.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
 "Debugger": -316,
 "Find References": -253,
-"Output": -309,
+"Output": -290,
 "Replication": -246,
 "Search Results": 0,
 "Shader Editor": 0
@@ -58,16 +58,16 @@ size=Vector2i(1718, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://tools/account_creator.gd", "res://script/character.gd", "res://script/game_world.gd", "res://scenes/UI/main_menu.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd"]
-selected_script="res://tools/account_creator.gd"
+open_scripts=["res://script/serverOnly/authentication.gd", "res://scenes/characters/character.gd", "res://script/game_world.gd", "res://scenes/UI/main_menu.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd", "res://script/serverOnly/server_physics_controller.gd"]
+selected_script="res://script/game_world.gd"
 open_help=[]
-script_split_offset=-200
+script_split_offset=136
 list_split_offset=100
-zoom_factor=1.0714285
+zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1138, 329, 1164, 697)
+floating_window_rect=Rect2i(2028, 378, 1164, 697)
 floating_window_screen=0
 
 [ShaderEditor]
