--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"CharacterBody3D",
+"class": &"Character",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/characters/character.gd"
+}, {
 "base": &"EditorPlugin",
 "class": &"IDE",
 "icon": "",
@@ -7,11 +15,19 @@ list=[{
 "language": &"GDScript",
 "path": "res://addons/_Godot-IDE_/IDE.gd"
 }, {
-"base": &"CharacterBody3D",
-"class": &"Character",
+"base": &"RefCounted",
+"class": &"Authentication",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://script/character.gd"
+"path": "res://script/serverOnly/authentication.gd"
+}, {
+"base": &"Node",
+"class": &"ServerPhysicsController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://script/serverOnly/server_physics_controller.gd"
 }]
