--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://t04xmkgtd7i8")
+PackedScene=PackedStringArray("uid://cfctv3chhos41", "uid://t04xmkgtd7i8")
