--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 93.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 98,
-"selection_to_column": 7,
-"selection_to_line": 103,
+"row": 135,
+"scroll_position": 9.519997,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 44,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 49,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -35,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 151,
+"scroll_position": 130.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -66,7 +62,7 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 34,
+"row": 28,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -119,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 47,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 108,
-"scroll_position": 85.16,
+"row": 54,
+"scroll_position": 35.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
