--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,6 @@ dock_hsplit_1=0
 dock_hsplit_2=327
 dock_hsplit_3=-422
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -35,7 +34,7 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://scenes/characters/character.tscn", "res://scenes/world/level_1.tscn")
-current_scene="res://scenes/world/game_world.tscn"
+current_scene="res://scenes/world/level_1.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -58,10 +57,10 @@ size=Vector2i(1718, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://script/game_world.gd", "res://scenes/UI/main_menu.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd"]
+open_scripts=["res://scenes/characters/character.gd", "res://script/game_world.gd", "res://scenes/UI/main_menu.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd"]
 selected_script="res://script/game_world.gd"
 open_help=[]
-script_split_offset=173
+script_split_offset=136
 list_split_offset=100
 zoom_factor=1.0
 
