--- a/.godot/editor/editor_layout.sync-conflict-20260201-104609-VX3E2RR.cfg
+++ b/.godot/editor/editor_layout.sync-conflict-20260201-104609-VX3E2RR.cfg
@@ -14,7 +14,7 @@ dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
-dock_9="Output,Debugger,Audio,Animation,Shader Editor,Find References,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 
 [docks/FileSystem]
 
@@ -34,7 +34,7 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://scenes/world/level_1.tscn", "res://scenes/characters/character.tscn")
-current_scene="res://scenes/world/game_world.tscn"
+current_scene="res://scenes/characters/character.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -46,7 +46,7 @@ bottom_panel_offsets={
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -60,7 +60,7 @@ size=Vector2i(1718, 1360)
 open_scripts=["res://scenes/characters/character.gd", "res://script/game_world.gd", "res://scenes/world/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd"]
 selected_script="res://script/autoload/network_manager.gd"
 open_help=[]
-script_split_offset=136
+script_split_offset=167
 list_split_offset=100
 zoom_factor=0.8544494
 
