--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 46,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"row": 158,
+"scroll_position": 133.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,10 +119,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 16,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -142,16 +142,30 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scenes/world/level_manager.gd]
+[res://scenes/characters/mesh_changer.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 50,
+"row": 8,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script/level_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 52,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
