--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 158,
-"scroll_position": 133.0,
+"row": 142,
+"scroll_position": 115.93939393939394,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 22,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 14,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 13.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 3,
-"selection_to_column": 5,
-"selection_to_line": 3,
+"row": 90,
+"scroll_position": 72.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -66,8 +62,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 16.0,
+"row": 20,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 1,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 33,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 4,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
+"row": 61,
+"scroll_position": 89.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,11 +129,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 19,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 0.0,
+"row": 28,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,11 +157,39 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 36,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 19.0,
+"row": 43,
+"scroll_position": 36.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/characters/character.tscn::1bdar]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/characters/character.tscn::GDScript_1bdar]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(21),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 30,
+"scroll_position": 5.363636363636363,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
