--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -15,7 +15,7 @@ dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
-dock_9="Output,Debugger,Audio,Animation,Shader Editor,Replication,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,GridMap"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Find References,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 
 [docks/FileSystem]
 
@@ -24,7 +24,7 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray()
+selected_paths=PackedStringArray("res://data/")
 uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/", "res://script/serverOnly/", "res://script/autoload/", "res://scenes/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://addons/godot-sqlite/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
 
 [docks/History]
@@ -35,19 +35,19 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://scenes/world/level_1.tscn", "res://scenes/characters/character.tscn")
-current_scene="res://scenes/characters/character.tscn"
+current_scene="res://scenes/world/level_1.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
 "Debugger": -316,
 "Find References": -253,
 "Output": -270,
-"Replication": -449,
+"Replication": -246,
 "Search Results": 0,
 "Shader Editor": 0
 }
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [EditorWindow]
 
@@ -58,16 +58,16 @@ size=Vector2i(1718, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/characters/character.gd", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://scenes/characters/mesh_changer.gd", "res://script/autoload/network_clock.gd", "res://script/autoload/network_manager.gd"]
-selected_script="res://scenes/characters/mesh_changer.gd"
+open_scripts=["res://script/serverOnly/authentication.gd", "res://scenes/characters/character.gd", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://scenes/characters/mesh_changer.gd", "res://script/autoload/network_manager.gd", "res://script/serverOnly/server_physics_controller.gd"]
+selected_script="res://script/game_world.gd"
 open_help=[]
-script_split_offset=-200
-list_split_offset=121
+script_split_offset=136
+list_split_offset=100
 zoom_factor=1.3528781
 
 [GameView]
 
-floating_window_rect=Rect2i(849, 258, 1164, 697)
+floating_window_rect=Rect2i(1138, 329, 1164, 697)
 floating_window_screen=0
 
 [ShaderEditor]
