--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,10 +8,9 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=374
-dock_hsplit_3=-325
+dock_hsplit_2=172
+dock_hsplit_3=-393
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,7 +23,7 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://data/")
+selected_paths=PackedStringArray("res://scenes/characters/character.gd")
 uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/", "res://script/serverOnly/", "res://script/autoload/", "res://scenes/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://addons/godot-sqlite/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
 
 [docks/History]
@@ -39,15 +38,15 @@ current_scene="res://scenes/world/level_1.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
-"Debugger": -316,
+"Debugger": -328,
 "Find References": -253,
-"Output": -270,
+"Output": -271,
 "Replication": -246,
 "Search Results": 0,
 "Shader Editor": 0
 }
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -58,8 +57,8 @@ size=Vector2i(1718, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://script/serverOnly/authentication.gd", "res://scenes/characters/character.gd", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://scenes/characters/mesh_changer.gd", "res://script/autoload/network_manager.gd", "res://script/serverOnly/server_physics_controller.gd"]
-selected_script="res://script/game_world.gd"
+open_scripts=["res://scenes/characters/character.gd", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/characters/mesh_changer.gd", "res://script/autoload/network_manager.gd"]
+selected_script="res://script/level_manager.gd"
 open_help=[]
 script_split_offset=136
 list_split_offset=100
