--- a/.godot/editor/script_editor_cache.sync-conflict-20260203-180640-WDV4GSM.cfg
+++ b/.godot/editor/script_editor_cache.sync-conflict-20260203-180640-WDV4GSM.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 28,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 97,
-"scroll_position": 0.0,
+"row": 34,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
-"folded_lines": PackedInt32Array(),
+"column": 34,
+"folded_lines": PackedInt32Array(52, 73),
 "h_scroll_position": 0,
-"row": 97,
-"scroll_position": 73.0,
+"row": 91,
+"scroll_position": 70.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 12,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 24,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 27,
+"row": 22,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 27,
-"selection_to_column": 8,
-"selection_to_line": 27,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,7 +91,7 @@ state={
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 29.0,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 4,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 27.0,
+"row": 61,
+"scroll_position": 89.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 19,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 2.0,
+"row": 28,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": PackedInt32Array(),
+"column": 3,
+"folded_lines": PackedInt32Array(25, 28, 30),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 15.0,
+"row": 55,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -174,11 +170,25 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
+"breakpoints": PackedInt32Array(21),
+"column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 24,
+"row": 30,
+"scroll_position": 5.363636363636363,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/characters/character.tscn::nqsrw]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
