--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,9 +8,10 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=361
-dock_hsplit_3=-393
+dock_hsplit_2=267
+dock_hsplit_3=-494
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -23,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://script/serverOnly/server_physics_controller.gd")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/", "res://script/serverOnly/", "res://script/autoload/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://Assets/StylArts/", "res://Assets/StylArts/StylizedHouseInterior/", "res://Assets/StylArts/StylizedHouseInterior/Art/", "res://Assets/StylArts/StylizedHouseInterior/Art/Textures/", "res://Arte/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
+selected_paths=PackedStringArray("res://scenes/characters/character.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://script/serverOnly/", "res://script/autoload/", "res://scenes/", "res://scenes/world/", "res://scenes/UI/", "res://scenes/characters/", "res://Assets/StylArts/", "res://Assets/StylArts/StylizedHouseInterior/", "res://Assets/StylArts/StylizedHouseInterior/Art/", "res://Assets/StylArts/StylizedHouseInterior/Art/Textures/", "res://addons/", "res://addons/netfox/", "res://addons/netfox/rollback/", "res://addons/godot-sqlite/bin/", "res://addons/godot-sqlite/bin/libgodot-cpp.ios.template_debug.xcframework/")
 
 [docks/History]
 
@@ -33,14 +34,14 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://scenes/characters/character.tscn", "res://bola.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/world/level_1.tscn")
-current_scene="res://scenes/world/game_world.tscn"
+open_scenes=PackedStringArray("res://scenes/world/game_world.tscn", "res://bola.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/world/level_1.tscn", "res://scenes/characters/character.tscn")
+current_scene="res://scenes/characters/character.tscn"
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
-"Debugger": -328,
+"Debugger": -392,
 "Find References": -253,
-"Output": -270,
+"Output": -271,
 "Replication": -246,
 "Search Results": 0,
 "Shader Editor": 0
@@ -51,16 +52,16 @@ selected_main_editor_idx=2
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 23)
-size=Vector2i(1718, 1360)
+mode="windowed"
+position=Vector2i(1, 31)
+size=Vector2i(2029, 1360)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/characters/character.gd", "res://scenes/characters/character.tscn::GDScript_1bdar", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://scenes/characters/mesh_changer.gd", "res://scenes/characters/npc.gd", "res://script/autoload/Ollama.gd", "res://script/serverOnly/server_physics_controller.gd"]
-selected_script="res://script/game_world.gd"
+open_scripts=["res://scenes/characters/character.gd", "res://script/game_world.gd", "res://script/level_manager.gd", "res://scenes/UI/main_menu.gd", "res://scenes/characters/mesh_changer.gd", "res://script/autoload/network_manager.gd", "res://scenes/characters/npc.gd", "res://script/autoload/Ollama.gd", "res://scenes/characters/player_input.gd"]
+selected_script="res://scenes/characters/character.gd"
 open_help=[]
-script_split_offset=-200
+script_split_offset=154
 list_split_offset=100
 zoom_factor=1.2104697
 
