--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"row": 125,
+"scroll_position": 104.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 41,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 41.0,
+"row": 172,
+"scroll_position": 150.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -86,34 +86,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://script/serverOnly/server_physics_controller.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": PackedInt32Array(),
-"h_scroll_position": 0,
-"row": 103,
-"scroll_position": 29.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 103,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scenes/characters/character.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 41,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 170,
-"scroll_position": 0.0,
+"row": 84,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,16 +119,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 17.0,
+"row": 13,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 18,
-"selection_to_column": 0,
-"selection_to_line": 19,
+"selection_from_column": 13,
+"selection_from_line": 13,
+"selection_to_column": 15,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -363,5 +345,33 @@ state={
 "selection_from_line": 131,
 "selection_to_column": 60,
 "selection_to_line": 131,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/characters/player_input.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 24.833333333333332,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/netfox/rollback/rollback-synchronizer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 451,
+"scroll_position": 306.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
