--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,11 +11,11 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-280
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
+dock_9_selected_tab_idx=1
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
-dock_9="Output,Debugger,Search Results,Audio,Animation,Shader Editor,Vest,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 
 [docks/FileSystem]
 
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://examples/multiplayer-fps/characters/player.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://examples/", "res://examples/shared/scenes/", "res://examples/multiplayer-fps/", "res://examples/multiplayer-fps/characters/", "res://addons/")
+selected_paths=PackedStringArray("res://examples/shared/scripts/time-display.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://examples/", "res://examples/shared/", "res://examples/shared/scripts/", "res://examples/multiplayer-fps/", "res://examples/multiplayer-fps/scripts/", "res://examples/multiplayer-fps/characters/")
 
 [docks/History]
 
@@ -35,14 +35,17 @@ include_global=true
 [EditorNode]
 
 open_scenes=PackedStringArray("res://examples/multiplayer-fps/multiplayer-fps.tscn", "res://examples/multiplayer-fps/characters/player.tscn")
-current_scene="res://examples/multiplayer-fps/multiplayer-fps.tscn"
+current_scene="res://examples/multiplayer-fps/characters/player.tscn"
 bottom_panel_offsets={
+"Animation": 0,
 "Audio": -450,
 "Debugger": -328,
-"Output": -270,
-"Search Results": 0
+"Output": -421,
+"Replication": 0,
+"Search Results": 0,
+"Shader Editor": 0
 }
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [EditorWindow]
@@ -54,8 +57,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://authentication.gd", "res://examples/multiplayer-fps/menu.gd", "res://addons/netfox/network-events.gd", "res://network_manager.gd", "res://examples/multiplayer-fps/scripts/player-input.gd", "res://examples/multiplayer-fps/scripts/player-spawner.gd", "res://examples/multiplayer-fps/scripts/player.gd"]
-selected_script="res://examples/multiplayer-fps/scripts/player-spawner.gd"
+open_scripts=["res://examples/shared/scripts/async.gd", "res://authentication.gd", "res://examples/multiplayer-fps/scripts/bullethole.gd", "res://export_presets.cfg", "res://examples/multiplayer-fps/menu.gd", "res://addons/netfox/network-events.gd", "res://network_manager.gd", "res://examples/multiplayer-fps/scripts/node-pool.gd", "res://examples/multiplayer-fps/scripts/player-input.gd", "res://examples/multiplayer-fps/scripts/player-spawner.gd", "res://examples/shared/scripts/player-spawner.gd", "res://examples/multiplayer-fps/scripts/player-weapon.gd", "res://examples/multiplayer-fps/scripts/player.gd", "res://examples/shared/scripts/time-display.gd"]
+selected_script="res://examples/shared/scripts/time-display.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
